--- a/GrandCheese.Util/GrandCheese.Util.csproj
+++ b/GrandCheese.Util/GrandCheese.Util.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Client.cs" />
     <Compile Include="Crypto.cs" />
     <Compile Include="Database.cs" />
+    <Compile Include="Exceptions\UnhandledSerializerTypeException.cs" />
     <Compile Include="GameOpcodes.cs" />
     <Compile Include="Log.cs" />
     <Compile Include="LoginOpcodes.cs" />
@@ -77,6 +78,7 @@
     <Compile Include="ProcessSettings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServerApp.cs" />
+    <Compile Include="Types\GCWideString.cs" />
     <Compile Include="Util.cs" />
   </ItemGroup>
   <ItemGroup>
