--- a/GrandCheese.Login/GrandCheese.Login.csproj
+++ b/GrandCheese.Login/GrandCheese.Login.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{DDB1AE40-C486-4953-A4CF-94F072222129}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <RootNamespace>GrandCheese</RootNamespace>
-    <AssemblyName>GrandCheese</AssemblyName>
+    <AssemblyName>GrandCheese.Login</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
