--- a/GrandCheese.Util/packages.config
+++ b/GrandCheese.Util/packages.config
@@ -8,4 +8,5 @@
   <package id="NLog.StructuredEvents" version="0.3.1" targetFramework="net452" />
   <package id="Npgsql" version="3.2.7" targetFramework="net452" />
   <package id="System.Threading.Tasks.Extensions" version="4.3.0" targetFramework="net452" />
+  <package id="zlib.net" version="1.0.4.0" targetFramework="net461" />
 </packages>
