--- a/GrandCheese.Util/packages.config
+++ b/GrandCheese.Util/packages.config
@@ -3,10 +3,9 @@
   <package id="Dapper" version="1.50.4" targetFramework="net452" />
   <package id="Ionic.Zlib" version="1.9.1.5" targetFramework="net452" />
   <package id="NLog" version="4.5.3" targetFramework="net461" />
-  <package id="NLog.Config" version="4.4.11" targetFramework="net452" />
-  <package id="NLog.Schema" version="4.5.0-alpha04" targetFramework="net452" />
-  <package id="NLog.StructuredEvents" version="0.3.1" targetFramework="net452" />
+  <package id="NLog.Config" version="4.5.3" targetFramework="net461" />
+  <package id="NLog.Schema" version="4.5.3" targetFramework="net461" />
+  <package id="NLog.StructuredEvents" version="0.4.0" targetFramework="net461" />
   <package id="Npgsql" version="3.2.7" targetFramework="net452" />
-  <package id="System.Threading.Tasks.Extensions" version="4.3.0" targetFramework="net452" />
-  <package id="zlib.net" version="1.0.4.0" targetFramework="net461" />
+  <package id="System.Threading.Tasks.Extensions" version="4.4.0" targetFramework="net461" />
 </packages>
