--- a/GrandCheese.Login/GrandCheese.Login.csproj
+++ b/GrandCheese.Login/GrandCheese.Login.csproj
@@ -62,9 +62,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Login.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="Server.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Data.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
