--- a/GrandCheese.Game/GrandCheese.Game.csproj
+++ b/GrandCheese.Game/GrandCheese.Game.csproj
@@ -63,10 +63,12 @@
     <Compile Include="Data\KSimpleDate.cs" />
     <Compile Include="Game.cs" />
     <Compile Include="Guild\GuildUserInfo.cs" />
+    <Compile Include="Inventory\KItem.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="User\Character.cs" />
     <Compile Include="User\DungeonUserInfo.cs" />
+    <Compile Include="User\Shop.cs" />
     <Compile Include="User\UserClient.cs" />
     <Compile Include="User\KUser.cs" />
   </ItemGroup>
