--- a/GrandCheese.Game/GrandCheese.Game.csproj
+++ b/GrandCheese.Game/GrandCheese.Game.csproj
@@ -63,7 +63,10 @@
     <Compile Include="Data\KSimpleDate.cs" />
     <Compile Include="Game.cs" />
     <Compile Include="Guild\GuildUserInfo.cs" />
+    <Compile Include="Inventory\Inventory.cs" />
     <Compile Include="Inventory\KItem.cs" />
+    <Compile Include="Inventory\KAttributeInfo.cs" />
+    <Compile Include="Inventory\KSocketInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="User\Character.cs" />
