finish initial interface stuff
todo: fix the i parameter

--- a/GrandCheese.Login/GrandCheese.Login.csproj
+++ b/GrandCheese.Login/GrandCheese.Login.csproj
@@ -81,5 +81,8 @@
       <Name>GrandCheese.Util</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Data\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
