"optional" KUser parameter
todo: look into a better way to do this

--- a/GrandCheese.Game/GrandCheese.Game.csproj
+++ b/GrandCheese.Game/GrandCheese.Game.csproj
@@ -91,5 +91,8 @@
       <Name>GrandCheese.Util</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Interfaces\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
