--- a/GrandCheese.Util/packages.config
+++ b/GrandCheese.Util/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Dapper" version="1.50.4" targetFramework="net452" />
   <package id="Ionic.Zlib" version="1.9.1.5" targetFramework="net452" />
+  <package id="MoonSharp" version="2.0.0.0" targetFramework="net461" />
   <package id="NLog" version="4.5.3" targetFramework="net461" />
   <package id="NLog.Config" version="4.5.3" targetFramework="net461" />
   <package id="NLog.Schema" version="4.5.3" targetFramework="net461" />
