--- a/GrandCheese.Game/GrandCheese.Game.csproj
+++ b/GrandCheese.Game/GrandCheese.Game.csproj
@@ -76,6 +76,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="User\Character.cs" />
     <Compile Include="User\DungeonUserInfo.cs" />
+    <Compile Include="User\KELOUserData.cs" />
     <Compile Include="User\Shop.cs" />
     <Compile Include="User\UserClient.cs" />
     <Compile Include="User\KUser.cs" />
