I have no idea where this is going

--- a/GrandCheese.Util/GrandCheese.Util.csproj
+++ b/GrandCheese.Util/GrandCheese.Util.csproj
@@ -79,6 +79,7 @@
     <Compile Include="Exceptions\UnhandledSerializerTypeException.cs" />
     <Compile Include="Extensions\StringExtensions.cs" />
     <Compile Include="GameOpcodes.cs" />
+    <Compile Include="Interfaces\IListCount.cs" />
     <Compile Include="Interfaces\ISerializable.cs" />
     <Compile Include="Log.cs" />
     <Compile Include="LoginOpcodes.cs" />
